--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,3 @@
-@import "../../styles/vars";
-
 .header {
   padding: 0 20%;
   display: flex;
@@ -26,4 +24,11 @@
 
 .header--nav-item {
   margin: 0 1rem;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.header--nav-item-active {
+  font-weight: 800;
 }
