Placeholder page setup.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import './styles/vars';
-@import './styles/header.scss';
+@import './styles/utils';
+@import './styles/base';
 
 body {
   margin: 0;
