--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,24 @@
+.page {
+  height: 100vh;
+}
+
+.page--about {
+  padding: 0 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.page--about-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .header {
   padding: 0 20%;
   display: flex;
@@ -10,7 +31,7 @@
 }
 
 .header--brand {
-  color: #0b0000;
+  color: $color-1;
   font-family: "Roboto Medium";
   font-size: 32px;
   line-height: 38px;
@@ -26,6 +47,7 @@
   margin: 0 1rem;
   font-size: 18px;
   font-weight: 500;
+  color: $color-1;
   text-decoration: none;
 }
 
