Slight styling update to color scheme

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -31,9 +31,10 @@
 }
 
 .header--brand {
-  color: $color-1;
+  color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(59,5,179,1) 27%, rgba(121,22,110,1) 100%);
   font-family: "Roboto Medium";
   font-size: 32px;
+  font-weight: 700;
   line-height: 38px;
 }
 
@@ -52,5 +53,20 @@
 }
 
 .header--nav-item-active {
+  color: $color-2;
   font-weight: 800;
+}
+
+@media (max-width: 640px) {
+  .header {
+    flex-direction: column;
+  }
+
+  .header--brand {
+    display: none;
+  }
+
+  .header--nav-group {
+    flex-direction: column;
+  }
 }
