--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -19,6 +19,29 @@
   margin: 0 auto;
 }
 
+.page--about-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 60%;
+
+  h2 {
+    color: $color-primary-0;
+    font-family: "Roboto Light";
+    font-size: 32px;
+    line-height: 38px;
+  }
+
+  p {
+    color: $color-primary-0;
+    font-family: "Roboto Light";
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+  }
+}
+
 .header {
   padding: 0 20%;
   display: flex;
@@ -31,7 +54,7 @@
 }
 
 .header--brand {
-  color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(59,5,179,1) 27%, rgba(121,22,110,1) 100%);
+  color: $color-primary-1;
   font-family: "Roboto Medium";
   font-size: 32px;
   font-weight: 700;
@@ -48,13 +71,18 @@
   margin: 0 1rem;
   font-size: 18px;
   font-weight: 500;
-  color: $color-1;
+  color: $color-primary-0;
   text-decoration: none;
 }
 
+.header--nav-item:hover {
+  color: $color-secondary-1-1;
+  font-weight: 700;
+}
+
 .header--nav-item-active {
-  color: $color-2;
-  font-weight: 800;
+  color: $color-secondary-1-1;
+  font-weight: 700;
 }
 
 @media (max-width: 640px) {
