--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,3 +1,19 @@
 $bg-color: #ffffff;
-$color-1: #3b05b3;
-$color-2: #79166e;
+
+$color-primary-0: #3A16A5;	// Main Primary color */
+$color-primary-1: #7157BE;
+$color-primary-2: #5537AE;
+$color-primary-3: #2B0E82;
+$color-primary-4: #200966;
+
+$color-secondary-1-0: #6C0CA0;	// Main Secondary color (1) */
+$color-secondary-1-1: #944FBA;
+$color-secondary-1-2: #7D2DA9;
+$color-secondary-1-3: #54077E;
+$color-secondary-1-4: #410463;
+
+$color-secondary-2-0: #153BA2;	// Main Secondary color (2) */
+$color-secondary-2-1: #5671BB;
+$color-secondary-2-2: #3555AB;
+$color-secondary-2-3: #0E2C7F;
+$color-secondary-2-4: #082164;
