--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,5 @@
 .page {
-  height: 100vh;
+  height: 90vh;
 }
 
 .page--about {
@@ -24,7 +24,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 70px;
+  height: 10vh;
   width: 100vw;
 }
 
@@ -53,7 +53,11 @@
 }
 
 .page--portfolio {
-  background: $color-primary-4 url('/assets/img/mixed-bg.png') no-repeat fixed center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(32,9,102,1) 0%, rgba(58,22,165,1) 27%, rgba(148,79,186,1) 100%);
 }
 
 .header {
@@ -64,7 +68,7 @@
   align-items: center;
   background-color: $bg-color;
   width: 60%;
-  height: 70px;
+  height: 10vh;
 }
 
 .header--brand {
@@ -127,6 +131,32 @@
   100% {
     color: $color-primary-0;
   }
+}
+
+.skill-group--container {
+  color: #eeeeee;
+  height: 30vh;
+  width: 20vw;
+
+  ul {
+    padding-left: 0;
+  }
+}
+
+.skill-group--title {
+  font-size: 22px;
+  font-weight: 600;
+  text-align: center;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #eeeeee;
+}
+
+.skill-group--item {
+  text-align: center;
+  list-style-type: none;
+  font-size: 18px;
+  line-height: 26px;
 }
 
 @media (max-width: 640px) {
