--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,12 @@
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .page {
   height: 90vh;
 }
