--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,5 @@
 body {
-  -ms-overflow-style: none;  /* IE and Edge */
+  -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
 }
 
@@ -8,7 +8,7 @@ body::-webkit-scrollbar {
 }
 
 .page {
-  height: 90vh;
+  height: 100vh;
 }
 
 .page--about {
@@ -23,9 +23,10 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-content: center;
   width: 90%;
   margin: 0 auto;
+  height: 100%;
+  align-items: center;
 }
 
 .page--bottom-footer {
@@ -63,10 +64,15 @@ body::-webkit-scrollbar {
 
 .page--portfolio {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background: linear-gradient(90deg, rgba(32,9,102,1) 0%, rgba(58,22,165,1) 27%, rgba(148,79,186,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(32, 9, 102, 1) 0%,
+    rgba(58, 22, 165, 1) 27%,
+    rgba(148, 79, 186, 1) 100%
+  );
 }
 
 .header {
@@ -88,7 +94,7 @@ body::-webkit-scrollbar {
   line-height: 38px;
 }
 
-.header--bars { 
+.header--bars {
   display: none;
 }
 
@@ -108,7 +114,8 @@ body::-webkit-scrollbar {
 
 .header--nav-item:hover {
   color: $color-secondary-1-1;
-  font-weight: 700;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .header--nav-item-active {
@@ -116,18 +123,36 @@ body::-webkit-scrollbar {
   text-decoration: underline;
 }
 
-.chevron-down {
-  color: $color-primary-0;
+.chevron {
   font-size: 24px;
+}
+
+.chevron-primary {
+  color: $color-primary-0;
   animation: pulse 1.5s infinite;
 }
 
-.chevron-down:hover {
+.chevron-white {
+  color: #ffffff;
+  animation: pulse2 1.5s infinite;
+}
+
+.chevron:hover {
   cursor: pointer;
 }
 
 .chevron-down:active {
   color: $color-secondary-1-1;
+}
+
+.chevron-up--container {
+  align-self: initial;
+  margin-top: 8rem;
+}
+
+.chevron-down--container {
+  align-self: center;
+  margin-bottom: 2rem;
 }
 
 @keyframes pulse {
@@ -140,6 +165,26 @@ body::-webkit-scrollbar {
   100% {
     color: $color-primary-0;
   }
+}
+
+@keyframes pulse2 {
+  0% {
+    color: #ffffff;
+  }
+  50% {
+    color: #aaaaaa;
+  }
+  100% {
+    color: #ffffff;
+  }
+}
+
+.skill-group--section {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .skill-group--container {
