--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -9,6 +9,17 @@ body::-webkit-scrollbar {
 
 .page {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.page--main-content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .page--about {
@@ -16,7 +27,7 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .page--about-content {
@@ -62,17 +73,13 @@ body::-webkit-scrollbar {
   }
 }
 
-.page--portfolio {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+.bg-gradiant {
   background: linear-gradient(
     90deg,
-    rgba(32, 9, 102, 1) 0%,
-    rgba(58, 22, 165, 1) 27%,
-    rgba(148, 79, 186, 1) 100%
-  );
+    $color-primary-0,
+    $color-primary-2,
+    $color-secondary-1-1
+  )
 }
 
 .header {
@@ -179,17 +186,9 @@ body::-webkit-scrollbar {
   }
 }
 
-.skill-group--section {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
 .skill-group--container {
   color: #eeeeee;
-  height: 60vh;
+  height: 50vh;
   width: 20vw;
 
   ul {
