--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -93,6 +93,12 @@ body::-webkit-scrollbar {
   height: 10vh;
 }
 
+.border-bottom {
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: $color-primary-0;
+}
+
 .header--brand {
   color: $color-primary-1;
   font-family: "Roboto Medium";
@@ -274,7 +280,37 @@ body::-webkit-scrollbar {
     }
   }
 
+  .page--skill-content {
+    flex-direction: column;
+    padding-top: 1rem;
+    height: 80%;
+  }
+
   .hero-avatar--container {
     display: none;
+  }
+
+  .chevron-up--container {
+    margin-top: 4rem;
+  }
+
+  .skill-group--container {
+    flex-direction: row;
+    width: 100%;
+    height: 30vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .skill-group--title {
+    font-size: 18px;
+    border-bottom-style: none;
+  }
+
+  .skill-group--item {
+    font-size: 14px;
+    line-height: 18px;
   }
 }
