--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -124,20 +124,20 @@ body::-webkit-scrollbar {
 .header--nav-item {
   margin: 0 1rem;
   font-size: 18px;
-  font-weight: 500;
   color: $color-primary-0;
   text-decoration: none;
 }
 
 .header--nav-item:hover {
+  font-family: 'Roboto Medium';
   color: $color-secondary-1-1;
-  font-weight: 600;
   cursor: pointer;
 }
 
 .header--nav-item-active {
-  color: $color-secondary-1-1;
-  text-decoration: underline;
+  font-family: 'Roboto Medium';
+  font-weight: 500;
+  color: $color-secondary-1-4;
 }
 
 .chevron {
