--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,19 +1,26 @@
 $bg-color: #ffffff;
 
-$color-primary-0: #3A16A5;	// Main Primary color */
-$color-primary-1: #7157BE;
-$color-primary-2: #5537AE;
-$color-primary-3: #2B0E82;
+$color-primary-0: #3a16a5; // Main Primary color */
+$color-primary-1: #7157be;
+$color-primary-2: #5537ae;
+$color-primary-3: #2b0e82;
 $color-primary-4: #200966;
 
-$color-secondary-1-0: #6C0CA0;	// Main Secondary color (1) */
-$color-secondary-1-1: #944FBA;
-$color-secondary-1-2: #7D2DA9;
-$color-secondary-1-3: #54077E;
+$color-secondary-1-0: #6c0ca0; // Main Secondary color (1) */
+$color-secondary-1-1: #944fba;
+$color-secondary-1-2: #7d2da9;
+$color-secondary-1-3: #54077e;
 $color-secondary-1-4: #410463;
 
-$color-secondary-2-0: #153BA2;	// Main Secondary color (2) */
-$color-secondary-2-1: #5671BB;
-$color-secondary-2-2: #3555AB;
-$color-secondary-2-3: #0E2C7F;
+$color-secondary-2-0: #153ba2; // Main Secondary color (2) */
+$color-secondary-2-1: #5671bb;
+$color-secondary-2-2: #3555ab;
+$color-secondary-2-3: #0e2c7f;
 $color-secondary-2-4: #082164;
+
+$color-gradiant-0: linear-gradient(
+  90deg,
+  $color-primary-0,
+  $color-primary-2,
+  $color-secondary-1-1
+);
